# zephyr-projects

./: key.txt  key.txt.pub
notes/: device-tree.txt  driver.txt  info.txt  module_layout.txt  zbus.txt
zephyr-AT/: CMakeLists.txt  app.overlay  prj.conf
zephyr-adc-dac/: CMakeLists.txt  app.overlay  prj.conf
zephyr-core-DMA-library/: CMakeLists.txt  Kconfig  app.overlay
zephyr-dma-driver-test/: CMakeLists.txt  Kconfig.sysbuild  app.overlay  sysbuild.cmake
zephyr-driver2/: CMakeLists.txt  app.overlay
zephyr-fs/: CMakeLists.txt  app.overlay  prj.conf
zephyr-gnss/: CMakeLists.txt  app.overlay  prj.conf
zephyr-hs-usb-test/: CMakeLists.txt  pc-test.c  pctest  prj.conf
zephyr-i2c/: CMakeLists.txt  app.overlay  prj.conf
zephyr-iridium/: CMakeLists.txt  app.overlay  prj.conf
zephyr-iridium/rockblock_build/: cmake_install.cmake
zephyr-iridium/rockblock_build/src/: cmake_install.cmake
zephyr-iridium/src/: main.c
zephyr-logging/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
zephyr-lte-test/: CMakeLists.txt  app.overlay  prj.conf
zephyr-mbox/: CMakeLists.txt  Kconfig.sysbuild  frdm_mcxn947_mcxn947_cpu0.overlay  prj.conf  sysbuild.cmake
zephyr-pm/: app.overlay
zephyr-rtc/: CMakeLists.txt  prj.conf
zephyr-subsys-pm/: CMakeLists.txt  app.overlay  prj.conf
zephyr-thread/: CMakeLists.txt  app.overlay  main.c  prj.conf  tasks_with_board.txt
zephyr-usb/: CMakeLists.txt  app.overlay  benchmark_usb.py  prj.conf
zephyr-usb2/: app.overlay  benchmark_cdc.py  host_com.py  prj.conf
zephyr-watchdog/: CMakeLists.txt  prj.conf
zephyr-zbus/: prj.conf  (+1 more)
(+113 files in other folders)
